# VNet-TF2

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: server.py
bench/: benchmark_vnet.py
cli/: main.py
tests/: test_api.py  test_benchmark.py  test_cli.py  test_inference.py  test_layers.py  test_model.py
vnet/: inference.py  layers.py  model.py
