[project]
name = "vnet-tf2-inference"
version = "0.1.0"
description = "TensorFlow 2 VNet for 3D medical image segmentation (inference-ready)"
authors = [
    { name = "Giorgio"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "tensorflow",
    "numpy",
    "nibabel",
    "pydicom",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
vnet-infer = "cli.main:main"
vnet-api = "api.server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["vnet*", "api*", "cli*", "bench*"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
